# telegram-ai-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/tg_agent/: __init__.py  bot.py  config.py  main.py
src/tg_agent/handlers/: __init__.py  echo.py
src/tg_agent/services/: audio.py  calendar.py  crypto_pay.py  history.py  openrouter.py  search.py
